Fixed photo src, date format & truncate pipe

--- a/src/app/components/article-cards/article-cards.component.scss
+++ b/src/app/components/article-cards/article-cards.component.scss
@@ -16,6 +16,8 @@
   }
 
   .article-card-image {
+    width: 400px;
+    height: 217px;
     flex-shrink: 0;
     object-fit: cover;
   }
